@@ -62,6 +62,8 @@ extern unsigned long timer_read (void);
 extern unsigned long timer_delta (unsigned long, unsigned long);
 extern void usleep (unsigned long); 
 
-extern void dump (const unsigned char* rgb, int cb, unsigned long index);
+#define dump(p,c,i) dumpw(p,c,i,0)
+extern void dumpw (const unsigned char* rgb, int cb, 
+		   unsigned long index, int width);
 
 #endif  /* __INIT_H__ */
